prevent word wrap of buttons

--- a/src/components/ProjectItem.module.css
+++ b/src/components/ProjectItem.module.css
@@ -177,7 +177,7 @@
     }
 }
 
-@media screen and (max-width: 390px)
+@media screen and (max-width: 450px)
 {
     .buttonContainer
     {
